--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mysql2": "^3.10.0",
+    "nodemailer": "^6.9.14",
     "redis": "^4.6.15",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
